Build homepage and a minimal working template for other pages

--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,22 @@
 # Site-wide settings
 # ------------------
 #
-# title: Your awesome title
+title: Runze Yu
 #
-# author:
-#   name: GitHub User
-#   email: your-email@domain.com
+author:
+  name: Runze Yu
+  email: ryu@math.harvard.edu
+  affliation: Harvard University
 #
 # The `>` after `description:` means to ignore line-breaks until next key. If
 #   you wish to omit the line-break after the end of text, use `>-` instead.
-# description: >
-#   Write an awesome description for your new site here. You can edit this line
-#   in _config.yml. It will appear in your document head meta (for Google search
-#   results) and in your feed.xml site description.
+description: >
+  This is the personal page of Runze Yu, a third-year Ph.D. student at the Math
+  Department, Harvard University, advised by Prof. Peter Kronheimer. 
+
+header_pages:
+- _pages/research.md
+- _pages/coursework.md
 
 
 # Build settings
@@ -20,7 +24,7 @@
 #
 # If you wish to use the gem-version of Minima with or without a Gemfile, use
 #   the following setting:
-# theme: minima
+theme: minima
 #
 # **OR** if you wish to use the theme directly from the GitHub repository by
 #   bypassing a Gemfile, use the following setting instead.
@@ -29,9 +33,10 @@
 # remote_theme: jekyll/minima@d4d779a
 #
 # Minima requires the following plugins:
-# plugins:
-#  - jekyll-feed
-#  - jekyll-seo-tag
+plugins:
+ - jekyll-feed
+ - jekyll-seo-tag
+ - jekyll-sitemap
 #
 # Uncomment the following setting if you wish to disable deprecation warnings
 #   from newer versions of sass converter. Adapt as required.
